2011-11-30  Andrew Pinski  <apinski@cavium.com>

PR c/51321
	* c-parser.c (c_parser_postfix_expression): Check groktypename results
	before looking at the main variant.

2011-11-30  Andrew Pinski  <apinski@cavium.com>

	* gcc.dg/pr51321.c: New testcase.





git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@181857 138bc75d-0d04-0410-961f-82ee72b054a4